--- a/DoodleJump/DoodleJump.csproj
+++ b/DoodleJump/DoodleJump.csproj
@@ -220,7 +220,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\PlatformScript.cs" />
+    <Compile Include="Assets\Script\PlatformScript.cs" />
+    <Compile Include="Assets\Script\Player.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
