--- a/DoodleJump/DoodleJump.csproj
+++ b/DoodleJump/DoodleJump.csproj
@@ -220,6 +220,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\CameraFollow.cs" />
     <Compile Include="Assets\Script\PlatformScript.cs" />
     <Compile Include="Assets\Script\Player.cs" />
   </ItemGroup>
